# gmail-organizer

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GmailOrganizer.applescript  LICENSE  README.md  app.py  claude_code_integration.py  docker-compose.yml  email_analyzer.py  email_classifier.py  frontend.py  gmail_auth.py  gmail_operations.py  launch_gmail_organizer.sh  main.py  pyproject.toml  render.yaml  requirements.txt  setup.sh
GmailOrganizerHelper/: README.md  build.sh
docs/: DEMO_MODE.md
gmail_organizer/: __init__.py  analytics.py  analyzer.py  auth.py  bulk_actions.py  calendar_integration.py  classifier.py  claude_integration.py  config.py  duplicates.py  export.py  filters.py  logger.py  main.py  mobile.py  multi_label.py  notifications.py  operations.py  priority.py  reminders.py  reputation.py  scheduler.py  search.py  security.py  storage.py  summaries.py  sync_manager.py  themes.py  training.py  unsubscribe.py
research/: RESEARCH_SUMMARY.md  video1_Clean Up Your Gmail Inbox The SMART Way! (FAST & EASY) - Inbox Zero.en.txt  video1_Clean Up Your Gmail Inbox The SMART Way! (FAST & EASY) - Inbox Zero.en.vtt  video1_Clean Up Your Gmail Inbox The SMART Way! (FAST & EASY) - Inbox Zero.info.json  video2_I used AI to sort my inbox.en.txt  video2_I used AI to sort my inbox.en.vtt  video2_I used AI to sort my inbox.info.json  video3_I built an AI Agent for my Email Inbox 🤖 #programming #coding #ai.en.txt  video3_I built an AI Agent for my Email Inbox 🤖 #programming #coding #ai.en.vtt  video3_I built an AI Agent for my Email Inbox 🤖 #programming #coding #ai.info.json  video4_BEST Way to Organize Gmail Inbox.en.txt  video4_BEST Way to Organize Gmail Inbox.en.vtt  video4_BEST Way to Organize Gmail Inbox.info.json
scripts/: GmailOrganizer.applescript  GmailOrganizer_Updated.applescript  launch_gmail_organizer.sh
(+28 files in other folders)
